# lenocon

./: Cargo.toml  README.md
.github/workflows/: release.yaml
lenocon-cli/: Cargo.toml
lenocon-cli/src/: main.rs
lenocon-core/: Cargo.toml
lenocon-core/src/: lib.rs
lenocon-daemon/: Cargo.toml
lenocon-daemon/src/: config.rs  lib.rs  logging.rs  main.rs  tray.rs
